--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>로봇앤코딩학원</title>
+  <title>새로움코딩학원</title>
 
   <!-- 부트스트랩 CSS 추가 -->
    <!-- 부트스트랩 CSS 추가 -->
@@ -80,11 +80,11 @@
 
 <div class ="container d-flex justify-content-center ">
 <div >
-<h1>로봇앤코딩학원</h1 >
+<h1>학생 수업관리(테스트)</h1 >
 <p>학생 수업관리 프로그램</p >
 </div >
 </div >
-
+a
 <!-- 부트스트랩 JS 추가 (부트스트랩의 일부 기능을 위해 필요) -->
 <script src ="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src ="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
