--- a/templates/lesson_update.html
+++ b/templates/lesson_update.html
@@ -32,8 +32,10 @@
        width:auto !important;
      }
    }
-  
   </style>     
+   <!-- Bootstrap Datepicker CSS -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"> 
+
 </head>
 <body>
     <div class="container-fluid">
@@ -75,12 +77,27 @@
     <form>
         <div class="form-group">
           <div style="display: flex;">
-            <div style="flex: 3;">
+        <!--    <div style="flex: 2;">
               <label for='studentId'>학생:</label>
               <input type='text' id='student_name' name='student_name' class='form-control' value="{{ student_name }}" readonly> 
               학년: <span id='gradeLevel'></span><br/>
             </div>
-            <div style="flex: 7;">
+          -->
+          <div style="flex: 2;">
+            <label for= "lessonDatePicker">수업일자</label>
+            <input type= "text" class= "form-control datepicker-input" id= "lessonDatePicker">
+          </div>
+            <div style="flex: 2;">
+              <label for="teach_id">담당교사</label>
+              <select class="form-control" id="teach_id">
+                  <option value="김선희">김선희</option> <!-- Assuming 'a' stands for Teacher Kim -->
+                  <option value="이용훈">이용훈</option> <!-- Assuming 'b' stands for Teacher Lee -->
+                  <option value="우창기">우창기</option> <!-- Assuming 'c' stands for Teacher Park -->
+                  <option value="정미숙">정미숙</option> <!-- Assuming 'd' stands for Teacher Choi -->
+                  <option value="조혜진">조혜진</option> <!-- Assuming 'e' stands for Teacher Jung -->
+              </select>
+            </div>
+            <div style="flex: 6;">
               <label for='subjectDetailId'>상세 과정:</label>
               <select id='subjectDetailId' name='subject_detail_id' class='form-control'></select> 
               과정: <span id='subjectName'></span><br/>
@@ -111,10 +128,40 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script> 
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ko.min.js"></script>
 
 <!-- Custom JavaScript -->
 <!-- 추가된 부분 시작 -->
 <script type="text/javascript">
+  $(document).ready(function() {
+    // 시작일자와 종료일자를 선택할 수 있는 date time picker 초기화
+    var lessonDatePicker = $('#lessonDatePicker').datepicker({
+      format: 'yyyy-mm-dd', // 날짜 형식 설정
+      autoclose: true, // 선택 시 자동으로 닫힘 
+      todayHighlight: true, // 오늘 날짜 강조 표시 
+      startDate: '2000-01-01', // 시작 가능한 최소 날짜
+      endDate: new Date(), // 종료 가능한 최대 날짜
+      language: 'ko' // 한국어로 설정 (language 사용)
+    }).on('show', function(e) {
+        var datePicker = $(this).data('datepicker');
+        var tableBody = datePicker.picker.find('.datepicker-days tbody');
+
+        tableBody.on('mouseenter', 'td.day:not(.disabled)', function() {
+            $(this).addClass('hover');
+        });
+
+        tableBody.on('mouseleave', 'td.day:not(.disabled)', function() {
+            $(this).removeClass('hover');
+        });
+    });
+// 수업일자 가지고 오기
+var lesson_date = '{{ lesson_date }}';
+
+lessonDatePicker.datepicker("setDate", lesson_date);
+   
+  });
+
     // 상세 과정 옵션 박스에 값 채우기
     var subjectDetailSelect = document.getElementById('subjectDetailId');
     {% for subject in subject_detail %}
@@ -134,13 +181,18 @@
   var lessonDetail = `{{ lesson_detail.lesson_detail|replace('<br>', '\n') }}`;
   var teachComment = `{{ lesson_detail.teach_comment|replace('<br>', '\n') }}`;
   var etc = `{{ lesson_detail.etc|replace('<br>', '\n') }}`;
-  
+  var teach_id = `{{ lesson_detail.teach_id }}`;
+
+  document.getElementById('teach_id').value = teach_id;
   document.getElementById('lesson_detail').value = lessonDetail;
   document.getElementById('teach_comment').value = teachComment;
   document.getElementById('etc').value = etc;
 
+
+
 ;
   </script>
+  
 <script src="/static/lesson_update.js"></script>
 
 </body></html>
