--- a/templates/login.html
+++ b/templates/login.html
@@ -67,7 +67,7 @@
 </head>
 <body>
     <div class="content">
-        <h1>로봇앤코딩학원</h1>
+        <h1>테스트</h1>
         <form method="post" action="/login">
             <div class="form-group">
                 <label for="username">Username:</label>
